force-app/main/default/objects/Sub_Brand__c/Sub_Brand__c.object-meta.xml
<CustomObject>
    <label>Sub-Brand</label>
    <nameField>
        <label>Sub-Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>