force-app/main/default/objects/Sub_Brand__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Sub-Brands</relationshipLabel>
    <relationshipName>Sub_Brands</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>