force-app/main/default/objects/Sub_Brand__c/fields/Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Name__c</fullName>
    <formula>Brand__r.Category__r.Name</formula>
    <label>Category Name</label>
    <type>Text</type>
</CustomField>