force-app/main/default/objects/Sub_Brand__c/fields/GH_Unison_Subbrand_Code__c.field-meta.xml
<CustomField>
    <fullName>GH_Unison_Subbrand_Code__c</fullName>
    <label>GH Unison Subbrand Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>