force-app/main/default/objects/Sub_Brand__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IF( Picture_ID__c==&apos;&apos;,&quot;&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+ Picture_ID__c , &quot;&quot;,100,100))</formula>
    <label>Logo</label>
    <type>Text</type>
</CustomField>