force-app/main/default/objects/Sub_Brand__c/fields/Picture_ID__c.field-meta.xml
<CustomField>
    <fullName>Picture_ID__c</fullName>
    <label>Picture ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>